--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container mt-3">
-        <form>
+        <form id="form">
             <div>
                 <label class="form-label">Id</label>
                 <input type="tex" class="form-control" id="id">
@@ -29,7 +29,7 @@
             </div>
             <div>
                 <label class="form-label">Direccion</label>
-                <input type="text" class="form-control" id="descrip">
+                <input type="text" class="form-control" id="direccion">
             </div>
             <button type="button" class="btn btn-primary"  id="guardar">Guardar</button>
             <button type="button" class="btn btn-primary"  id="EditarT">Editar</button>
